  19 Sep 2019;  <bemeurer@gentoo.org> neovim-0.4.2.ebuild:
  app-editors/neovim: add luv dependency

*neovim-0.4.2 (19 Sep 2019)

  19 Sep 2019;  <bemeurer@gentoo.org> +neovim-0.4.2.ebuild:
  app-editors/neovim: bump 0.4.2

*neovim-0.3.8 (10 Aug 2019)

  10 Aug 2019;  <bemeurer@gentoo.org> +files/sysinit.vim, +metadata.xml,
  +neovim-0.3.8.ebuild:
  app-editors/neovim: bump 0.3.8